overflow fix

--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,5 +1,5 @@
 .Home{
-    width: 100vw;
+    width: 100%;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
